Added a new way to create customers by Rabbimq queues

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.password=12345
 spring.jpa.hibernate.ddl-auto= update
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.rabbitmq.addresses= amqps://uipswtgx:Ys35sGZneYg-ufwk19XBKEFDiF_WCCex@chimpanzee.rmq.cloudamqp.com/uipswtgx
+spring.rabbitmq.queue=customers
